<resources>
    <string name="app_name">reservation restaurant app</string>
    <string name="welcome_to">welcome to</string>
    <string name="reservation_restaurant_app">Reservation Restaurant App</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="enter_to_reservation">enter to reservation</string>
    <string name="pick_a_date">pick a Date</string>
    <string name="pick_hour">Pick Hour</string>
    <string name="vegan">vegan</string>
    <string name="peanut">peanut</string>
    <string name="inside"> inside</string>
    <string name="outside"> outside</string>
    <string name="amount_of_people">amount of people: </string>
    <string name="enter_number">enter number</string>
    <string name="rate">rate</string>
    <string name="done">Done</string>
    <string name="amount_of_children">amount of children: </string>
    <string name="hope_to_see_you_again">hope to see you again </string>
    <string name="thank_you">thank you</string>
    <string name="cancel">cancel</string>
    <string name="we_will_improve_us">we will improve us</string>
    <string name="ok">ok</string>
    <string name="Rate_us">Rate us</string>
    <string name="at"> at </string>
    <string name="your_order_on">your order on </string>
    <string name="kids">kids</string>
    <string name="set_time">set time</string>
    <string name="Please_enter_your_phone_number">Please enter your phone number</string>
    <string name="Please_enter_your_name">Please enter your name</string>
    <string name="fill_all_the_field">fill all  fields to finish</string>
    <string name="create_by_Ben_Machlev">Create by Ben Machlev</string>
    <string name="Amount_of_children">Amount of children </string>
    <string name="Amount_of_people">Amount of people</string>
    <string name="actions">Actions</string>
    <string name="hello">"Hello "</string>
    <string name="scroll_down_to_see_your_order">Scroll  to see your order</string>
    <string name="your_number">Your number</string>
    <string name="you_will_sit">You will sit</string>
    <string name="again">Again</string>
</resources>