<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/newres"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_restaurant_app"
        android:textSize="20sp"
        android:textColor="@color/black"
        ></TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="@string/enter_yout_name"
            android:textColorHint="@color/black"></EditText>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lname">
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtVw"
            android:layout_toRightOf="@+id/txtVw"
            android:textColor="@color/black"
            android:outlineAmbientShadowColor="@color/black"
            />

        <EditText
            android:id="@+id/txtVw"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:digits="0123456789"
            />
    </LinearLayout>
    <Button
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_to_reservation"
        android:id="@+id/enter" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/enter_to_reservation"
        android:id="@+id/Cstart"
        android:textColor="#fff" />
</LinearLayout>